--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
-#datasource
-spring.datasource.url = jdbc:mysql://localhost:3306/file_storage
-spring.datasource.username = root
-spring.datasource.password = 123456
+# Datasource
+# spring.datasource.url = jdbc:mysql://localhost:3306/file_storage
+# spring.datasource.username = root
+# spring.datasource.password = 123456
 
 ## Hibernate Properties
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
-spring.jpa.hibernate.ddl-auto = update
+# spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+# spring.jpa.hibernate.ddl-auto = update
 
 ## Hibernate Logging
-logging.level.org.hibernate.SQL= DEBUG
+# logging.level.org.hibernate.SQL= DEBUG
